# homi

./: .gitignore  Makefile  README.md  homi.service.in  meson.build
cijoe/auxilliary/: test-connect-xal.c
cijoe/tasks/: test-ipc.yaml
config/: homi.conf.in
docs/: client.md  ipc.md
include/: homi_proto.h  homic.h  homid.h  homid_ipc.h  homid_log.h  homid_opts.h  homid_xal.h
src/: homi_proto.c  homic.c  homid.c  homid_ipc.c  homid_log.c  homid_opts.c  homid_xal.c
